[package]
name = "lenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32"
vulkano-shaders = "0.32"
vulkano-win = "0.32"
cgmath = "0.18"
bytemuck = { version = "1.7", features = ["derive", "extern_crate_std", "min_const_generics"] }
winit = "0.27"
