[package]
name = "lenses"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { version = "0.30"}
vulkano-shaders = {version = "0.30"}
winit = { version="0.26"}
vulkano-win = {version="0.30"}
bytemuck = { version = "1.12"}
cgmath = { version = "0.18"}
